# chat-on-linux-based-on-pipe

./: CMakeLists.txt  README  README.md  makescripts
config/: serverConfig
include/: infoOper.h  jsonOpera.h  myStruct.h
src/: client.cpp  infoOper.cpp  jsonOpera.cpp  server.cpp  test  test.cpp
